<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsBookkeeping</string>
    <string name="title_section1">新增消费</string>
    <string name="title_section2">每月消费</string>
    <string name="title_section3">消费报表</string>
    <string name="title_section4">个人消费</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="main_item">项目:</string>
    <string name="main_account">金额：</string>
    <string name="main_Remarks">备注：</string>
    <string name="main_summit">提交</string>
    <string name="main_Personal">个人</string>
    <string name="main_Type">类型：</string>
    <string name="main_community">集体</string>
    <string name="main_monthlyreport">月报表</string>
    <string name="app_login">登陆</string>
    <string name="login_userName">用户名：</string>
    <string name="login_password">密码：</string>
    <string name="login_clear">注册</string>
    <string name="login_login">登陆</string>
    <string name="login_userNamehint">请输入用户名</string>
    <string name="login_passwordHint">请输入密码</string>
    <string name="menu_syncs">同步</string>
    <string name="menu_overview">详情</string>
    <string name="cName">姓名</string>
    <string name="cItem">消费</string>
    <string name="cAmount">金额</string>
    <string name="cCreateTime">时间</string>
    <string name="details">账单</string>
    <string name="logout">退出</string>
    <string name="drawable_zero">0</string>
    <string name="cTotal">消费</string>
    <string name="cAvg">平均</string>
    <string name="cPay">应付</string>
    <string name="reportdetail">月消费报表</string>
    <string name="transdetail">消费详情</string>
    <string name="cnote">注：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
