

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="40sp"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_userName" >
            </TextView>

            <EditText
                android:id="@+id/txtUname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_userNamehint"
                android:text="" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password" >
            </TextView>

            <EditText
                android:id="@+id/txtPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_passwordHint"
                android:inputType="textPassword"
                android:text="" >
            </EditText>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_clear" >
            </Button>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_login" >
            </Button>
        </TableRow>
    </TableLayout>
