<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    >
 <!-- 标题 -->
 <LinearLayout
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
  <TextView
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:text="@string/cName" />

   <TextView
       android:layout_width="180dp"
       android:layout_height="wrap_content"
       android:text="@string/cItem" />
  
  <TextView
      android:layout_width="40dp"
      android:layout_height="wrap_content"
      android:text="@string/cAmount" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cCreateTime" />
   
</LinearLayout>
 <!-- ListView控件 -->
<ListView  
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:id="@+id/listView"
    />
</LinearLayout>
