<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dip"
    android:orientation="horizontal" >

    <!--
         <TextView
        android:id="@+id/blListItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
    -->


         <TextView
            android:id="@+id/tvName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cName" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cTotal" />

        <TextView
            android:id="@+id/tvAvg"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cAvg" />

        <TextView
            android:id="@+id/tvPay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cPay" />

</LinearLayout>