<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_item" />

        <EditText
            android:id="@+id/txtItem"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >

            <requestFocus android:layout_width="wrap_content" />

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10sp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_account" />

        <EditText
            android:id="@+id/txtAccount"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout04"
        android:layout_marginTop="10sp" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_Remarks" />

        <EditText
            android:id="@+id/txtRemarks"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/LinearLayout01" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_Type" />

        <RadioGroup
            android:id="@+id/RadioGroup1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="fill_parent" >
            <RadioButton
                android:id="@+id/rdbtnCommunity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_community" />

            <RadioButton
                android:id="@+id/rdbtnPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_Personal" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_summit" />
    </LinearLayout>

</RelativeLayout>